# rp_pico_wifi_camera

./: .gitmodules  Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
