[package]
name = "rp_pico_wifi_camera"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.1.3"}
defmt = "0.3"
defmt-rtt = "0.4.1"
panic-halt = "0.2.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
# pio = "0.2.0"
# pio-proc = "0.2.0"
# We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
# Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
# portable-atomic = {version = "1.7.0", features = ["critical-section"]}
# rp2040-boot2 = "0.3.0"
# rp2040-hal = {version = "0.10.2", features = ["critical-section-impl", "rt", "defmt"]}
# usbd-hid = "0.8"

portable-atomic = { version = "1.7", features = ["critical-section"] }
static_cell = "2.1.0"
embassy-rp = {version = "0.2.0", features = ["critical-section-impl", "time-driver"]}
embassy-futures = { version = "0.1" }
embassy-usb-logger = { version = "0.2.0" }
embassy-time = "0.3.2"
embassy-net = { version = "0.4", features = ["proto-ipv4", "dhcpv4", "tcp"] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.0"
cyw43 = "0.2.0"
cyw43-pio = "0.2.0"

log = "0.4"

arducam-legacy = { path = "arducam-legacy" }

embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }